# serializer version: 1
# name: TestRenderErrorSnapshot.test_generic_exception_snapshot
  '''
  ⚠️ **Invalid input**: bad input
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: TestRenderErrorSnapshot.test_spec_error_snapshot
  '''
  ⚠️ **Spec validation failed**: agent 'atlas' is not configured for this tenant
  `rid: 01ARZ3NDEKTSV4RRFFQ69G5FAV`
  '''
# ---
# name: test_embed_render_snapshot[minimal_thinking]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='', description='**Thinking** · 42s', color=9807270, footer=None)
# ---
# name: test_embed_render_snapshot[preview_present]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='', description='**Thinking** · 42s\n> Let me check that for you.', color=9807270, footer=None)
# ---
# name: test_embed_render_snapshot[saturated_trail_with_preview_and_cost]
  EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='', description='**Working** · 42s\n```\n+3 earlier\n✔️ Read a file\n🚫 Wrote a file\n✔️ Search issues (tracker)\n✔️ Listed files\n🔍 Searching files\n🖋️ Running a command\n```\n> Preview text describing the ongoing work.', color=3447003, footer=None)
# ---
# name: test_embed_render_snapshot[single_tool]
  EmbedData(phase=<TurnPhase.TOOL_RUNNING: 'tool_running'>, title='', description='**Working** · 42s\n```\n🖋️ Running a command\n```', color=3447003, footer=None)
# ---
# name: test_embed_render_snapshot[terminal_done_no_cost]
  EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas · 42s · 1.5k in / 320 out')
# ---
# name: test_embed_render_snapshot[terminal_done_with_cost]
  EmbedData(phase=<TurnPhase.DONE: 'done'>, title='', description='', color=5763719, footer='Atlas · 42s · 1.5k in / 320 out · $0.04')
# ---
# name: test_embed_render_snapshot[terminal_error_no_trail]
  EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='', description='', color=15548997, footer='❌ error · Atlas · 42s · 0 in / 0 out')
# ---
# name: test_embed_render_snapshot[terminal_error_with_reason]
  EmbedData(phase=<TurnPhase.ERROR: 'error'>, title='', description='', color=15548997, footer='❌ rate limited · Atlas · 42s · 100 in / 50 out')
# ---
# name: test_embed_render_snapshot[thinking_no_now]
  EmbedData(phase=<TurnPhase.THINKING: 'thinking'>, title='', description='**Thinking**', color=9807270, footer=None)
# ---
